Removing 1 indentation cell from data rows on reports.

--- a/app/views/reports/_header.html.erb
+++ b/app/views/reports/_header.html.erb
@@ -1,6 +1,6 @@
 <thead>
   <tr>
-    <% @groups_size.times do %>
+    <% (@groups_size - 1).times do %>
       <th class="indent">&nbsp;</th>
     <% end %>
     <th class="wrap"><%= @group_fields[-1].sub("_id","").sub("_"," ").capitalize %></th>
