--- a/app/views/reports/_row.html.erb
+++ b/app/views/reports/_row.html.erb
@@ -1,5 +1,5 @@
 <tr class="data">
-  <% @groups_size.times do %>
+  <% (@groups_size - 1).times do %>
     <td class="indent">&nbsp;</td>
   <% end %>
   
