--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -658,7 +658,7 @@ table td:last-child {
     border-right: 0;
 }
 table th {
-    padding: 5px;
+    padding: 5px 5px 5px 10px;
     text-align: left;
     background: #2e6399;
     color: #ddd;
@@ -706,8 +706,9 @@ div.report-wrapper tr.sum-totals td.indent   {
 }
 
 div.report-wrapper tr.data .inner-most-field {
-  text-align: left;
+  text-align    : left;
   padding-right : 0px;
+  padding-left  : 5px;
 }
 
 div.report-wrapper {
