--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -1,14 +1,24 @@
 <div id="page-header">
-  <h1>Listing providers</h1>
+  <h1>Listing Providers</h1>
 </div>
 
 <table>
-
-<% @providers.each do |provider| %>
   <tr>
-    <td><%= link_to provider.name, edit_provider_path(provider) %></td>
+    <th>Name</th>
+    <th>Type</th>
+    <th>Agency</th>
+    <th>Branch</th>
+    <th>Subcontractor</th>
   </tr>
-<% end %>
+  <% @providers.each do |provider| %>
+    <tr>
+      <td><%= link_to provider.name, edit_provider_path(provider) %></td>
+      <td><%= provider.provider_type %></td>
+      <td><%= provider.agency %></td>
+      <td><%= provider.branch %></td>
+      <td><%= provider.subcontractor %></td>
+    </tr>
+  <% end %>
 </table>
 
 <%= will_paginate @providers %>
