--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 <body class="<%= bodytag_class %>">
   <div id="header">
     <div class="wrap selfclear">
-      <a id="logo" href="/"><strong>Low</strong>down</a>
+      <a id="logo" href="/">Ride Connection Service Database</a>
       <div id="login-area">
         <% if current_user %>
         <a href="#"><%= current_user.email %></a> | <%= link_to "Log out", logout_path, {:method=>"post"} %></a>
