--- a/app/views/allocations/_form.html.erb
+++ b/app/views/allocations/_form.html.erb
@@ -70,6 +70,11 @@
         <%= form.label :contract %>
         <%= form.text_field :contract %>
       </li>
+
+      <li class="selfclear">
+        <%= form.label :inactivated_on %>
+        <%= form.text_field :inactivated_on, :class => "datepicker" %>
+      </li>
     </ol>
     
     <div class="actions">
