--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,10 +1,10 @@
 <div id="page-header">
-  <h1>Edit Report</h1>
+  <h1>Define New Report</h1>
 </div>
 
 <% if @report.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@report.errors.count, "error") %> prohibited this report from being saved:</h2>
+    <h2><%= pluralize(@report.errors.count, "error") %> prohibited this customer from being saved:</h2>
 
     <ul>
     <% @report.errors.full_messages.each do |msg| %>
@@ -16,11 +16,4 @@
 
 <%= form_for @report do |form| %>
   <%= render "form", :f => form %>
-<% end %>
-
-<%= form_for @report do |f| %>
-  <h2>Run Report</h2>
-  <fieldset>
-    <%= render "run_form", :f => f, :report => @report, :ol_class => "section" %>
-  </fieldset>
 <% end %>
