--- a/app/views/layouts/reports.html.erb
+++ b/app/views/layouts/reports.html.erb
@@ -1,7 +1,7 @@
 <% content_for :menu_bar do %>
         <ul id="subnav" class="selfclear">
           <li><%= link_to "Predefined", :action=>:index %></li>
-          <li><%= link_to "Define New", :action=>:show_create_report %></li>
+          <li><%= link_to "Define New", new_report_path %></li>
           <li><%= link_to "Quarterly Narrative", :action=>:show_create_quarterly  %></li>
           <li><%= link_to "Ride Purpose", :action=>:show_ride_purpose_report  %></li>
           <li><%= link_to "A&E", :action=>:show_create_age_and_ethnicity  %></li>
