--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= stylesheet_link_tag "jquery-ui-1.8.9.custom.css" %>
 
   <%= javascript_include_tag :defaults %>
-  <%= javascript_include_tag "jquery-ui.min.js" %>
+  <%= javascript_include_tag "jquery-ui.js" %>
   <%= javascript_include_tag "jquery-ui-timepicker-addon.js" %>
   <%= javascript_include_tag "dateFormat.js" %>
 
