--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -683,8 +683,14 @@ table tr.report-item td {
     border-top: 1px solid #2e6399;
 }
 
-div.report-wrapper td { text-align: right; }
-body.trips div.report-wrapper td { text-align: left; }
+div.report-wrapper td { 
+  text-align: right; 
+}
+
+body.trips div.report-wrapper td,
+body.summaries.index div.report-wrapper td { 
+  text-align : left; 
+}
 
 div.report-wrapper td.report-item {
     background: #E5F2FF;
