--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -12,7 +12,10 @@
 
 <% @projects.each do |project| %>
   <tr>
-    <td><%= link_to project.name, edit_project_path(project) %></td>
+    <td>
+      <%= link_to project.name, edit_project_path(project) %>
+      <%= link_to "", project_url(project), :class => "delete", :method => "delete", :confirm => "Are you sure you want to delete this project?" if current_user.is_admin && project.allocations.empty? %>
+    </td>
     <td><%= project.funding_source %></td>
     <td><%= project.funding_subsource %></td>
     <td><%= project.project_number %></td>
