--- a/app/views/reports/ride_purpose_report.html.erb
+++ b/app/views/reports/ride_purpose_report.html.erb
@@ -1,5 +1,5 @@
 <h1>Ride Purpose Report</h1>
-<h2><strong>Jan 1, 2010</strong> through <strong>June 30, 2010</strong></h2>
+<h2><strong><%= @start_date.strftime "%B %Y" %></strong></h2>
 <table id="purpose-results">
   <thead>
     <tr>
