--- a/app/views/reports/show_ride_purpose_report.html.erb
+++ b/app/views/reports/show_ride_purpose_report.html.erb
@@ -5,7 +5,10 @@
 <form action="/reports/ride_purpose_report" method="GET">
   <fieldset>
 
-  <p><label for="start_date">Start date:</label> <input type="text" name="start_date" class="datepicker" /></p>
+  <p>
+    <label for="start_date">Start date:</label> 
+    <%= date_select :ride_purpose_query, :start_date, :discard_day => true, :default => @start_date %>
+  </p>
 
   <div class="actions">
     <input type="submit" name="report" value="Report" />
