--- a/app/views/reports/show_create_active_rider.html.erb
+++ b/app/views/reports/show_create_active_rider.html.erb
@@ -9,7 +9,7 @@
   </p>
 </form>
 
-<h2>Month beginning <%= @start_date.to_s %></h2>
+<h2><%= @start_date.strftime "%B %Y" %></h2>
 
 <table id="active-rider-results" class="results">
   <thead>
