--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -9,17 +9,16 @@
     <th>Agency</th>
     <th>Branch</th>
     <th>Subcontractor</th>
+    <th/>
   </tr>
   <% @providers.each do |provider| %>
     <tr>
-      <td>
-        <%= link_to provider.name, edit_provider_path(provider) %>
-        <%= link_to "", provider_url(provider), :class => "delete", :method => "delete", :confirm => "Are you sure you want to delete this provider?" if current_user.is_admin && provider.allocations.empty? %>
-      </td>
+      <td><%= link_to provider.name, edit_provider_path(provider) %></td>
       <td><%= provider.provider_type %></td>
       <td><%= provider.agency %></td>
       <td><%= provider.branch %></td>
       <td><%= provider.subcontractor %></td>
+      <td><%= link_to "Delete", provider_url(provider), :class => "delete", :method => "delete", :confirm => "Are you sure you want to delete this provider?" if current_user.is_admin && provider.allocations.empty? %></td>
     </tr>
   <% end %>
 </table>
