--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -26,7 +26,7 @@
             <span class="template">
               <select>
                 <% Report::GroupMappings.each do |key,value| %>
-                  <%= content_tag :option, key.humanize.titleize, :value => value %>
+                  <%= content_tag :option, key.humanize.titleize, :value => key %>
                 <% end %>
               </select>
             </span>
