--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -25,8 +25,8 @@
           <span id="group-by-custom-wrapper">
             <span class="template">
               <select>
-                <% Report::GroupMappings.each do |key,value| %>
-                  <%= content_tag :option, key.humanize.titleize, :value => key %>
+                <% Report::GroupMappings.keys.each do |key| %>
+                  <%= content_tag :option, key.titleize, :value => key %>
                 <% end %>
               </select>
             </span>
