Allow deletion of summaries completely.

--- a/app/views/summaries/show_update.html.erb
+++ b/app/views/summaries/show_update.html.erb
@@ -10,16 +10,17 @@
 
   <ul>
     <% for version in @versions %>
-    <li>
+      <li>
         <% if version == @summary %>
-        <%= time_ago_in_words version.valid_start %> ago
-        <% else %>
-        <%= link_to time_ago_in_words(version.valid_start), :action=>:show_update, :id=>version.id %> ago
+          <%= time_ago_in_words version.valid_start %> ago
+          <% else %>
+          <%= link_to time_ago_in_words(version.valid_start), :action=>:show_update, :id=>version.id %> ago
         <% end %>
         by <span class="update-user"><%= version.updater.email %></span> 
         <%= link_to "", delete_summary_version_path(version), :class => "delete", :method => :post, :confirm => "Are you sure you want to delete this version?" unless version.latest? %>
-    </li>
-  <% end %>
+        <%= link_to "", delete_summary_path(version), :class => "delete", :method => :delete, :confirm => "Are you sure you want to delete this summary?" if @versions.size == 1 %>
+      </li>
+    <% end %>
   </ul>
 
   <% if ! @summary.latest? %>
