Sort group-by listings

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -25,7 +25,7 @@
           <span id="group-by-custom-wrapper">
             <span class="template">
               <select>
-                <% Report::GroupMappings.keys.each do |key| %>
+                <% Report::GroupMappings.keys.sort.each do |key| %>
                   <%= content_tag :option, key.titleize, :value => key %>
                 <% end %>
               </select>
